// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements inside input render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-kjafn5"
  >
    <div
      class="css-1h2sesj"
    >
      <span>
        Hello
      </span>
    </div>
    <input
      class="css-1qbfd7b"
    />
    <div
      class="css-1rlfk3i"
    >
      <span>
        World
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input addons render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-kjafn5"
  >
    <div
      class="css-iggo13"
    >
      https://
    </div>
    <input
      class="css-1ug6p1x"
    />
    <div
      class="css-1sqyofe"
    >
      .com
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input renders correctly 1`] = `
<DocumentFragment>
  <input
    class="css-1ug6p1x"
  />
</DocumentFragment>
`;
